There's two single rule(s) in the prefab wizard as an example.

--- a/Editor/Resources/CS_PrefabWizard.uxml
+++ b/Editor/Resources/CS_PrefabWizard.uxml
@@ -7,6 +7,7 @@
     <ui:VisualElement style="border-top-color: rgb(36, 36, 36); border-left-width: 0; border-right-width: 0; border-top-width: 2px; border-bottom-width: 0; margin-top: 2px; margin-bottom: 2px;" />
     <ui:ListView focusable="True" style="flex-grow: 1; flex-shrink: 0;">
         <ui:Instance template="CS_SingleRule" name="CS_SingleRule" />
+        <ui:Instance template="CS_SingleRule" name="CS_SingleRule" />
     </ui:ListView>
     <ui:VisualElement style="border-top-color: rgb(36, 36, 36); border-left-width: 0; border-right-width: 0; border-top-width: 2px; border-bottom-width: 0; margin-top: 2px; margin-bottom: 2px;" />
     <ui:Button text="Create Prefab for Selected Mesh" style="border-top-left-radius: 1px; border-bottom-left-radius: 1px; border-top-right-radius: 1px; border-bottom-right-radius: 1px; margin-left: 0; margin-right: 0; margin-top: 0; margin-bottom: 0; padding-left: 10px; padding-right: 10px; padding-top: 10px; padding-bottom: 10px;" />
